# advent-of-code2022

./: Cargo.toml
src/: config.rs  day1.rs  main.rs
src/aoc/: day1.rs  day3.rs  mod.rs
src/aoc/day2/: mod.rs  rock_paper_scissors.rs
