[package]
name = "advent-of-code2022"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
reqwest = "0.11.13"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
either = "1.8.0"

[profile.release]
opt-level = 3
overflow-checks = false
strip = true